# 4067X_spin_up

./: .gitignore  4067x_spin_up.v5code  Cargo.toml  compile_commands.json  project.pros
scripts/: upload.sh
src/: auton.rs  drive_system.rs  expansion_system.rs  intake_system.rs  main.cpp  main.rs  shooter_system.rs
