[package]
name = "spin_up_4067X"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
vex-rt = { git = "https://gitlab.com/professoralex13/vex-rt" } 