[package]
name = "spin_up_4067X"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
vex-rt = "0.14.0"
vex-rs-lib = { path = "../vex-rs-lib" }
uom = { version = "0.33.0", default-features = false, features = ["f64", "si"] }
