[package]
name = "spin_up_4067X"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uom = { git = "https://github.com/professoralex13/uom", default-features = false, features = ["f64", "si"] }
vex-rt = { git = "https://gitlab.com/professoralex13/vex-rt/", branch = "uom", features = ["uom"] }
vex-rs-lib = { path = "../vex-rs-lib" }
